# rebuttal

./: .eslintrc.json  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
api/: Cargo.toml
api/src/: main.rs
constants/: index.ts  microtasks.ts
prisma/: data.ts  schema.prisma  seed.ts
src/elements/Documents/: Document.tsx  FeedbackDocument.tsx
src/elements/Documents/Comments/: CommentBox.tsx
src/elements/Documents/DocumentTabs/: index.tsx
src/elements/Editor/: index.tsx
src/elements/Layout/: index.tsx
src/elements/Microtasks/: ClassificationTask.tsx  DistinguishMicrotask.tsx  MicrotaskDescription.tsx  ReviewTask.tsx
src/elements/Parts/: Alert.tsx  Error.tsx  Loading.tsx
src/lib/: fetcher.ts  nextAuth.ts  prismaClient.ts  trpc.ts
src/lib/tiptap/: extension.ts
src/pages/: _app.tsx  index.tsx
src/pages/api/: [trpc].ts
src/pages/api/auth/: [...nextauth].ts
src/pages/auth/: login.tsx  signUp.tsx
src/pages/documents/: [id].tsx
src/pages/help/: index.tsx
src/scripts/: document_to_microtasks.ts
src/server/: env.js  trpc.ts  utils.ts
src/server/contexts/: index.ts
src/server/routers/: documents.ts  index.ts  microtask_results.ts  microtasks.ts  paragraphs.ts  tasks.ts  users.ts
src/types/: MicrotaskResponse.ts  next-auth.d.ts
src/utils/: index.ts
src/validation/: auth.ts
web/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/prisma/: schema.prisma  seed.ts
web/src/help/: index.tsx
web/src/lib/: trpc.ts
web/src/pages/: _app.tsx
(+55 files in other folders)
