[package]
name = "rebuttal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
hyper = { version = "0.14.20", features = ["full"]}
mime = "0.3.16"
serde_json = "1.0.85"
tokio = {version = "1.20.1", features = ["full"]}
tower-http = {version = "0.3.4", features=["trace"]}
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}

[dev-dependencies]
tower = "0.4.13"
